# OpenForge

./: .gitignore  Cargo.toml  README.md
crates/openforge/: Cargo.toml
crates/openforge-patch/: Cargo.toml  build.rs
crates/openforge-patch/src/: asar.rs  fuses.rs  icon.rs  inspect.rs  integrity.rs  main.rs  patch.rs  portable.rs
crates/openforge/src/: games.rs  installer.rs  launcher.rs  lib.rs  models.rs  modpack.rs  resolver.rs
crates/openforge/src/api/: aggregator.rs  cfwidget.rs  eternal.rs  forgecdn.rs  mod.rs  web.rs
crates/openforge/src/core/: config.rs  error.rs  mod.rs  paths.rs
