[workspace]
resolver = "2"
members = [
  "crates/openforge",
  "crates/openforge-patch",
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
rust-version = "1.78"
license     = "GPL-3.0-or-later"
repository  = "local"
authors     = ["OpenForge"]

[workspace.dependencies]
anyhow         = "1"
thiserror      = "1"
tokio          = { version = "1", features = ["full"] }
reqwest        = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "gzip", "brotli", "deflate"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
serde_path_to_error = "0.1"
url            = "2"
futures        = "0.3"
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap           = { version = "4", features = ["derive", "env"] }
indicatif      = "0.17"
sha2           = "0.10"
sha1           = "0.10"
hex            = "0.4"
zip            = "2"
dirs           = "5"
directories    = "5"
async-trait    = "0.1"
bytes          = "1"
parking_lot    = "0.12"
once_cell      = "1"
toml           = "0.8"
uuid           = { version = "1", features = ["v4", "serde"] }
chrono         = { version = "0.4", features = ["serde"] }
petgraph       = "0.6"
regex          = "1"
scraper        = "0.20"

[profile.release]
lto           = "fat"
codegen-units = 1
opt-level     = 3
strip         = "symbols"
panic         = "abort"

[profile.dev]
opt-level = 1
