[package]
name = "openforge-patch"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "openforge-patch"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
regex.workspace = true
walkdir = "2"
sha2.workspace = true
hex.workspace = true
indicatif.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
image = { version = "0.25", default-features = false, features = ["png"] }
ico = "0.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
] }
