[package]
name = "openforge"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "openforge"
path = "src/lib.rs"

[[bin]]
name = "openforge"
path = "src/bin/openforge.rs"

[[bin]]
name = "openforge-gui"
path = "src/bin/openforge-gui.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
indicatif.workspace = true
sha2.workspace = true
sha1.workspace = true
hex.workspace = true
zip.workspace = true
dirs.workspace = true
directories.workspace = true
async-trait.workspace = true
bytes.workspace = true
parking_lot.workspace = true
once_cell.workspace = true
toml.workspace = true
uuid.workspace = true
chrono.workspace = true
petgraph.workspace = true
